--- a/config/!config.ini.dist
+++ b/config/!config.ini.dist
@@ -103,16 +103,23 @@ COMMENT_EDIT_TIME = 5
 ; in seconds
 COMMENTS_FLOOD_TIME = 30
 ;
-; Show comment time in a relative time format.
-; Set to "1" to enable or "0" to disable (disabled by default)
-; Instead of date/time time of comment will show something like: 2 days 1 hours ago
-; This feature will add a few milliseconds to page rendering time
-; Also relative time works for English language only.
-; For non-English locales the international time formatter will be
-; used in intl extensio is enabled.
-; When This is set to 0 (default) the simple php date() function is
-; used to format time which is this is fastest option.
-COMMENTS_FORMAT_TIME = 0
+;
+; If you have intl extension installed
+; and you are interested in multi-lingual support
+; you may want to
+; enable this option.
+; Depending on version of the ICU library on your server,
+; the names of time zones may (or may not be) translated into
+; user's language
+; The reason this is an option is because some older ICU libraries
+; do not have translations for time zone names, in which case
+; you probably don't want to enable this.
+; Anyway, if you have intl library you should enable this
+; and experiment by setting different languages and navigating to profile page
+; and see how the time zone selection menu looks.
+; set 1 to enable, 0 to disable.
+; if your php does not have intl extension this will have not effect.
+ENABLE_TIMEZONE_TRANSLATION = 1
 ;
 ; time to wait between posting
 ; questions and answers in minutes
