Added Plugins directory under config directory. All custom plugins must be saved in Plugins dir now. Wrote sample plugin SponsorMessage. In can be activated in !config.ini in [INPUT_FILTERS] section. Updates class loader class to look for plugins in Plugins directory.

--- a/config/!config.ini.dist
+++ b/config/!config.ini.dist
@@ -612,6 +612,10 @@ online = "\\Lampcms\\Modules\\Observers\\Online"
 ; and most resource-intensive last
 ; Make sure Names are Unique - cannot use same filter name twice!
 [INPUT_FILTERS]
+;
+; This is a Demo plugin you can uncomment it to enable
+; just to see how it works.
+; demo = "\\Lampcms\\Plugins\\SponsorMessage"
 ipFilter= "\\Lampcms\\Modules\\Observers\\IpFilter"
 floodCheck = "\\Lampcms\\Modules\\Observers\\FloodCheck"
 questionSimilar = "\\Lampcms\\Modules\\Observers\\Similars"
