Fixes Issue #103 Unable to login with password. Updated lighttpd.conf to exclude .ico files from rewrite rules

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -14,10 +14,11 @@
 # This is the actual configuration used in support.lampcms.com site
 #
 $HTTP["host"] == "support.lampcms.com" {
-  server.document-root = "/usr/local/support.lampcms.com/www/"
+  server.document-root = "/usr/local/sites/support.lampcms.com/www/"
      url.rewrite-once = (
-	"/(index|api)\.php" => "$0",
-	".*\.(png|gif|jpg|jpeg|css|js)$" => "$0",
+	"/index\.php" => "$0",
+	"/_assets/*" => "$0",
+	".*\.(png|gif|jpg|jpeg|css|js|ico)$" => "$0",
 	".*\.(css|js)\?t" => "$0",
   	"^/(.*)$" => "/index.php/$1"
 	)
